tests/compError/Maybe.ucl
// testSkip
// compError
// error: expected type Maybe(builtin:Number) but got type Maybe(builtin:String).some
// tests/compError/Maybe.ucl:12 -> function defined here

Maybe = fn(T: Type): Type {
	enum {
		none
		some = struct(value: T) {}
	}
}

test = fn(): Maybe(Number) {
	Maybe(String).some {
		value = "a string"
	}
}